增加 NotificationUtil 工具类。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,10 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="hello kotlin"
             android:id="@+id/tv"/>
 
     <ImageView
