--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="hello kotlin"
+            android:textAllCaps="true"
             android:id="@+id/tv"/>
 
     <ImageView
