--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/ic_bg"
         android:fitsSystemWindows="true"
         tools:context=".MainActivity">
+    <!--android:background="@mipmap/ic_bg"-->
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -16,6 +17,12 @@
             android:background="@color/colorPrimary"
             app:titleTextColor="@android:color/white"
             app:title="@string/app_name"/>
+
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/count"
+              android:textSize="20dp"
+              android:text="DDD"/>
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20dp"
+              android:text="DDD"/>
 
     <Button
             android:layout_width="match_parent"
